# revm-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commit_history.py
benches/: routing_bench.rs
docs/: ARCHITECTURE.md  README.md  SUMMARY.md  _sidebar.md  index.html
docs/core-concepts/: how-aco-works.md  network-topology.md  pheromone-matrix.md  routing-strategies.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/reference/: benchmarks.md  papers.md
docs/sdk/: aco-router.md  overview.md  revm-client.md
docs/solana/: leader-schedule.md  stake-weighted-qos.md  tpu-direct-send.md
scripts/: run_bench.sh  test.sh
sdk/: README.md  jest.config.js  package-lock.json  package.json
sdk/src/: client.ts  index.ts  router.ts  types.ts
sdk/tests/: router.test.ts
src/: lib.rs
src/aco/: ant.rs  colony.rs  config.rs  mod.rs  pheromone.rs
src/network/: mod.rs  probe.rs  topology.rs
src/router/: engine.rs  mod.rs  strategy.rs
src/solana/: leader.rs  mod.rs  sender.rs  types.rs
tests/: integration_test.rs
