[package]
name = "revm-core"
version = "0.1.0"
edition = "2021"
authors = ["REVM Protocol <dev@revmprotocol.com>"]
description = "Ant Colony Optimization routing engine for Solana transaction delivery"
license = "MIT"
repository = "https://github.com/revmdotio/revm-core"
keywords = ["solana", "routing", "aco", "transaction", "optimization"]
categories = ["algorithms", "network-programming"]
readme = "README.md"
exclude = ["docs/**", "assets/**", "sdk/**", "scripts/**"]

[lib]
name = "revm_core"
path = "src/lib.rs"

[features]
default = []
network = ["dep:tokio", "dep:reqwest"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
log = "0.4"
thiserror = "1.0"
parking_lot = "0.12"

# Optional — network probing and HTTP sender
tokio = { version = "1.34", features = ["net", "time", "rt-multi-thread", "macros"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.34", features = ["full"] }

[[bench]]
name = "routing_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
